# hashin

./: .gitignore  CREDITS.md  Cargo.toml  README.md  package.json
cli/: Cargo.toml  server.rs
cli/src/: commands.rs  errors.rs  main.rs
cli/src/commands/: gen_passwords.rs  hashes_from_file.rs  simple_bench.rs
core/: Cargo.toml
core/benches/: my_benchmark.rs
core/src/: db.rs  errors.rs  lib.rs  passwords.rs  utils.rs
