[package]
name = "hashassin-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
hashassin-core = { path = "../core" }
clap = {version = "4.1.6", features = ["derive", "env", "unicode", "wrap_help"]}
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter",] }
indicatif = "0.17.3"
anyhow = "1.0.69"
thiserror = "1.0.40"
