[package]
name = "hashassin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
digest = "0.10.6"
hex-literal = "0.3.4"
md-5 = "0.10.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitmask-enum = "2.1.0"
itertools = "0.10"
rayon = "1.7"
sha2 = "0.10.6"
anyhow = "1.0.70"
thiserror = "1.0.40"
serde = "1.0.160"
serde_json = "1.0.96"
blake2 = "0.10.6"
ripemd = "0.1.3"

[dev-dependencies]
# see https://github.com/bheisler/criterion.rs
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
